--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+
 <script>
   var fireballSize = 22;
   var getFireballSpeed = function (left) {
@@ -198,6 +199,8 @@
     return height * 2 / 3 - getWizardHeight();
   };
 </script>
+
+<script src="js/util.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/game.js"></script>
