--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 <script src="js/backend.js"></script>
 <script src="js/render.js"></script>
 <script src="js/wizard.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
